# gsheet-anki

./: .gitignore  LICENSE.txt  README.md  anki_import.py  gen_deck.py  pyproject.toml  requirements.txt  vercel.json
api/: gen_deck.py  index.py
src/gsheet_anki/: anki_import.py  auth.py  gen_deck.py  hash_password.py  index.py
src/gsheet_anki/templates/: home.html
