[project]
name = "gsheet-anki"
version = "0.1.0"
description = "A simple app to translate Google Sheets to an Anki deck."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "genanki>=0.13.1",
    "google-auth>=2.39.0",
    "gspread>=6.2.0",
    "oauth2client>=4.1.3",
]
